# bazuu

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  bazuu.cxx
.github/workflows/: ci-test.yml
includes/: bazuu_bitboard_ops.hpp  bazuu_ce.hpp  bazuu_ce_board.hpp  bazuu_ce_game_state.hpp  bazuu_ce_zobrist.hpp  bazuu_magic_data.hpp  defs.hpp  prng.hpp
src/: bazuu_ce.cc  bazuu_ce_board.cc  bazuu_ce_zobrist.cc  defs.cc
tests/: CMakeLists.txt  tests.cxx
